# django-ws

./: .gitignore  .pdm-python  README.md  pyproject.toml
django_ws/: __init__.py  app.py  handler.py
src/django_ws/: __init__.py  app.py  handler.py
